# Rust-Axum-SQLx

./: .env  Cargo.toml
migrations/: up.sql
src/: db_connection.rs  error.rs  main.rs
src/handler/: product.rs
src/model/: product.rs
src/router/: product.rs
