[package]
name = "axum-sqlx-postgres"
version = "0.1.0"
authors = ["my <sosnsg@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
axum = "0.6.18"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
